# Aizel-Inference

./: .dockerignore  .gitattributes  .gitmodules  Cargo.toml  Dockerfile  JWTtoken  README.md  aizel_config.yml  aizel_config_peaq.yml  build.rs  build.sh  config.json  docker-compose.yml  main.go  redeploy.sh  requirements.txt  resp.json  tdx-data.json
.github/workflows/: ci_dev.yml  ci_dev_peaq.yml
common/: Cargo.toml
common/src/: error.rs
common/src/tee/: mod.rs  provider.rs  verifier.rs
deploy/: deploy_alicloud.sh  deploy_gcp.sh
docker/: Dockerfile.GCP  Dockerfile.base  requirements.txt
proto/: gate.proto  gate_grpc.proto  infernece.proto  status_code.proto
script/: bootstrap.sh
secret/: go.mod  go.sum  main.go
src/: client.rs  lib.rs  main.rs  server.rs
src/chains/: contract.rs  ethereum.rs  mod.rs  nonce_manager.rs
src/crypto/: digest.rs  elgamal.rs  key.rs  mod.rs  secret.rs  signature.rs
src/crypto/tests/: crypto_tests.rs
src/node/: aizel.rs  aizel_server.rs  config.rs  mod.rs  model_client.rs  model_server.rs  node.rs  server.rs
src/s3_minio/: client.rs
src/tee/: alicloud.rs  attestation.rs  gcp.rs  mod.rs  provider.rs
src/utils/: error.rs
verifier/: Cargo.toml
verifier/src/: alicloud_verifier.rs  gcp_verifier.rs  lib.rs  verifier.rs
